NEXT-404 - Resolved merge conflicts

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -53,6 +53,7 @@
                 {% block sw_customer_detail_content_view %}
                     <router-view :customer="customer"
                                  :customerName="customerName"
+                                 :addresses="addresses"
                                  :touchpoints="touchpoints"
                                  :customerGroups="customerGroups"
                                  :paymentMethods="paymentMethods"
