--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
@@ -44,7 +44,7 @@
                 {% endblock %}
 
                 {% block sw_customer_detail_addresses_grid %}
-                    <sw-grid :items="customer.addresses" :selectable="false">
+                    <sw-grid :items="addresses" :selectable="false">
                         {% block sw_customer_detail_addresses_grid_slots %}
                             <template slot="columns" slot-scope="{ item }">
 
