NEXT-359 - Extract deliveries and delivery grids to separate components, fix wording

--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -88,7 +88,7 @@
                                                             truncate
                                                             sortable>
                                                 {% block sw_order_list_grid_columns_amount_label %}
-                                                    {{ item.amountTotal | currency }}
+                                                    {{ item.amountTotal | currency(item.currency.shortName) }}
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
