NEXT-359 - Add missing variables, fix block name

--- a/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -13,7 +13,7 @@
                     {% block sw_card_slot_default %}{% endblock %}
                 </slot>
                 <slot name="grid">
-                    {% block sw_card_grid_slot %}{% endblock %}
+                    {% block sw_card_slot_grid %}{% endblock %}
                 </slot>
 
                 {% block sw_card_loader %}
