--- a/Resources/administration/src/app/component/base/sw-card-section/sw-card-section.less
+++ b/Resources/administration/src/app/component/base/sw-card-section/sw-card-section.less
@@ -1,26 +1,29 @@
 @import "~less/variables";
 
+@sw-card-section-color-border:               @color-steam-cloud;
+@sw-card-section-secondary-color-background: @color-light-gray;
+
 .sw-card-section {
     padding: 30px;
 
     &.sw-card-section--divider-top {
-        border-top: 1px solid @color-steam-cloud;
+        border-top: 1px solid @sw-card-section-color-border;
     }
 
     &.sw-card-section--divider-right {
-        border-right: 1px solid @color-steam-cloud;
+        border-right: 1px solid @sw-card-section-color-border;
     }
 
     &.sw-card-section--divider-bottom {
-        border-bottom: 1px solid @color-steam-cloud;
+        border-bottom: 1px solid @sw-card-section-color-border;
     }
 
     &.sw-card-section--divider-left {
-        border-left: 1px solid @color-steam-cloud;
+        border-left: 1px solid @sw-card-section-color-border;
     }
 
     &.sw-card-section--secondary {
-        background-color: @color-light-gray;
+        background-color: @sw-card-section-secondary-color-background;
     }
 
     &.sw-card-section--slim {
