NEXT-359 - Remove unneeded CSS

--- a/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
+++ b/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
@@ -4,6 +4,7 @@
 @sw-grid-column-color-action:       @color-shopware-blue;
 @sw-grid-column-color-border:       @color-steam-cloud;
 @sw-grid-column-content-color-text: @color-gutenberg;
+@sw-grid-column-color-link:         @color-shopware-blue;
 
 .sw-grid-column {
     cursor: default;
@@ -65,7 +66,7 @@
             text-decoration: none;
 
             &:hover {
-                color: @color-shopware-blue;
+                color: @sw-grid-column-color-link;
                 text-decoration: underline;
             }
         }
