--- a/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.less
+++ b/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.less
@@ -1,18 +1,18 @@
 @import "~less/variables";
 
-.sw-info-card {
-    .sw-info-card__metadata-user-name {
+.sw-user-card {
+    .sw-user-card__metadata-user-name {
         font-weight: 600;
         font-size: 16px;
         margin-bottom: 8px;
     }
 
-    .sw-info-card__metadata-item {
+    .sw-user-card__metadata-item {
         margin-bottom: 8px;
         font-size: 14px;
     }
 
-    .sw-info-card__actions {
+    .sw-user-card__actions {
         padding-top: 10px;
 
         .sw-button {
