--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -1,5 +1,5 @@
 {% block sw_order_line_items_grid %}
-    <sw-grid class="sw-order-line-items-grid" :items="lineItems" table>
+    <sw-grid class="sw-order-line-items-grid" :items="orderLineItems" table>
 
         {% block sw_order_line_items_grid_columns %}
             <template slot="columns" slot-scope="{ item }">
