--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -2,7 +2,7 @@
     <div class="sw-order-detail-base">
 
         {% block sw_order_detail_base_info_card %}
-            <sw-info-card :title="$tc('sw-order.detailBase.cardTitleDetails')"
+            <sw-user-card :title="$tc('sw-order.detailBase.cardTitleDetails')"
                           :user="order.customer"
                           :isLoading="order.isLoading">
 
@@ -54,7 +54,7 @@
                     </sw-container>
                 {% endblock %}
 
-            </sw-info-card>
+            </sw-user-card>
         {% endblock %}
 
         {% block sw_order_detail_base_line_items_card %}
