--- a/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -1,5 +1,5 @@
 {% block sw_card %}
-    <div class="sw-card" :class="cardStyles">
+    <div class="sw-card" :class="cardClasses">
         {% block sw_card_title %}
             <div class="sw-card__title" v-if="title">{{ title }}</div>
         {% endblock %}
