--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.less
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.less
@@ -67,7 +67,6 @@
         border-width: 0 1px;
         font-family: @sw-text-editor-font;
         height: 260px;
-        overflow: auto;
 
         .ql-editor {
             padding: 15px 20px;
@@ -82,7 +81,7 @@
         padding: 8px 12px;
         font-size: 14px;
         color: @sw-text-editor-color-toolbar;
-        background: #f4f7fa;
+        background: @sw-text-editor-color-toolbar-bg;
         border: 1px solid @sw-text-editor-color-border;
         border-bottom-left-radius: @border-radius-default;
         border-bottom-right-radius: @border-radius-default;
