--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.less
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.less
@@ -1,6 +1,24 @@
+@import "~less/variables";
+
+@sw-order-detail-color-border: @color-steam-cloud;
+
 .sw-order-detail {
     .sw-order-detail-page__tabs {
         max-width: 800px;
         margin: 0 auto 40px auto;
+    }
+
+    .sw-card-section--secondary .sw-address {
+        .sw-address__headline {
+            padding: 15px;
+            margin: 0;
+            font-weight: 600;
+            font-size: 14px;
+            border-bottom: 1px solid @sw-order-detail-color-border;
+        }
+
+        .sw-address__body {
+            padding: 15px;
+        }
     }
 }
